--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,8 @@ language:
     chapter_name: "Chapter "
 output_dir: "docs"
 book_filename: "main"
-rmd_files: ["index.Rmd", "01-intro.Rmd", "02-data-structures.Rmd","03-tidyverse.Rmd"]
+rmd_files: ["index.Rmd", "01-intro.Rmd", "02-data-structures.Rmd","03-tidyverse.Rmd",'04-plotting.Rmd','05-desc_stats.Rmd']
+
+
 
 
