--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -12,7 +12,8 @@ rmd_files: ["index.Rmd", "01-intro.Rmd",
             '06-linear_regression.Rmd',
             '07-multiple_regression.Rmd',
             '08-transformations.Rmd',
-            '09-categorical_predictors.Rmd'
+            '09-categorical_predictors.Rmd',
+            '10-significance.Rmd'
             ]
 
 
