--- a/_output.yml
+++ b/_output.yml
@@ -3,10 +3,10 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Ling 411 - Fall 2023</a></li>
+        <li><a href="https://umitatlamaz.github.io/ling_411/">Ling 411 - Fall 2024</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
+    edit: https://github.com/umitatlamaz/ling_411/edit/main/%s
     #download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes: 
@@ -14,4 +14,3 @@ bookdown::pdf_book:
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
-bookdown::epub_book: default
