add multiple regression

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,7 +10,7 @@ rmd_files: ["index.Rmd", "01-intro.Rmd",
             '04-plotting.Rmd',
             '05-desc_stats.Rmd', 
             '06-linear_regression.Rmd',
-            # '07-multiple_regression.Rmd',
+            '07-multiple_regression.Rmd',
             # '08-transformations.Rmd',
             # '09-categorical_predictors.Rmd',
             # '10-significance.Rmd',
