--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,7 +11,7 @@ rmd_files: ["index.Rmd", "01-intro.Rmd",
             '05-desc_stats.Rmd', 
             '06-linear_regression.Rmd',
             '07-multiple_regression.Rmd',
-            # '08-transformations.Rmd',
+            '08-transformations.Rmd',
             # '09-categorical_predictors.Rmd',
             # '10-significance.Rmd',
             # '11-logistic_regression.Rmd',
